--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file source-language="en" datatype="plaintext" original="file.ext">
+    <file source-language="pl" datatype="plaintext" original="file.ext">
     <body>
         <trans-unit id="label.actions">
             <source>label.actions</source>
-            <target>Actions</target>
+            <target>Działania</target>
         </trans-unit>
         <trans-unit id="label.id">
             <source>label.id</source>
@@ -12,59 +12,59 @@
         </trans-unit>
         <trans-unit id="label.created_at">
             <source>label.created_at</source>
-            <target>Created</target>
+            <target>Data stworzenia</target>
         </trans-unit>
-            <trans-unit id="label.updated_at">
+        <trans-unit id="label.updated_at">
             <source>label.updated_at</source>
-        <target>Updated</target>
+            <target>Data edycji</target>
         </trans-unit>
         <trans-unit id="label.title">
             <source>label.title</source>
-            <target>Title</target>
+            <target>Nazwa</target>
         </trans-unit>
         <trans-unit id="label.content">
             <source>label.content</source>
-            <target>Content</target>
+            <target>Treść</target>
         </trans-unit>
         <trans-unit id="label.category">
             <source>label.category</source>
-            <target>Category</target>
+            <target>Kategoria</target>
         </trans-unit>
         <trans-unit id="label.tags">
             <source>label.tags</source>
-            <target>Tags</target>
+            <target>Tagi</target>
         </trans-unit>
         <trans-unit id="action.show">
             <source>action.show</source>
-            <target>Show</target>
+            <target>Pokaż</target>
         </trans-unit>
         <trans-unit id="action.create">
             <source>action.create</source>
-            <target>Create</target>
+            <target>Utwórz</target>
         </trans-unit>
         <trans-unit id="action.edit">
             <source>action.edit</source>
-            <target>Edit</target>
+            <target>Edytuj</target>
         </trans-unit>
         <trans-unit id="action.delete">
             <source>action.delete</source>
-            <target>Delete</target>
+            <target>Usuń</target>
         </trans-unit>
         <trans-unit id="message.empty_list">
             <source>message.empty_list</source>
-            <target>List is empty.</target>
+            <target>Lista jest pusta.</target>
         </trans-unit>
         <trans-unit id="title.post_list">
             <source>title.post_list</source>
-            <target>Article list</target>
+            <target>Lista Artykułów</target>
         </trans-unit>
         <trans-unit id="title.post_details">
             <source>title.post_details</source>
-            <target>Article</target>
+            <target>Artykuł</target>
         </trans-unit>
         <trans-unit id="label.comments">
             <source>label.comments</source>
-            <target>Comments</target>
+            <target>Komentarze</target>
         </trans-unit>
         <trans-unit id="label.email">
             <source>label.email</source>
@@ -76,127 +76,127 @@
         </trans-unit>
         <trans-unit id="action.back_to_list">
             <source>action.back_to_list</source>
-            <target>Back</target>
+            <target>Powrót</target>
         </trans-unit>
         <trans-unit id="message.record_not_found">
             <source>message.record_not_found</source>
-            <target>Record not found</target>
+            <target>Nie znaleziono rekordu</target>
         </trans-unit>
         <trans-unit id="title.post_create">
             <source>title.post_create</source>
-            <target>Create article</target>
+            <target>Utwórz artykuł</target>
         </trans-unit>
         <trans-unit id="action.save">
             <source>action.save</source>
-            <target>Save</target>
+            <target>Zapisz</target>
         </trans-unit>
         <trans-unit id="label.posts">
             <source>label.posts</source>
-            <target>Articles</target>
+            <target>Artykuły</target>
         </trans-unit>
         <trans-unit id="label.categories">
             <source>label.categories</source>
-            <target>Categories</target>
+            <target>Kategorie</target>
         </trans-unit>
         <trans-unit id="label.users">
             <source>label.users</source>
-            <target>Users</target>
+            <target>Użytkownicy</target>
         </trans-unit>
         <trans-unit id="action.logout">
             <source>action.logout</source>
-            <target>Log out</target>
+            <target>Wyloguj się</target>
         </trans-unit>
         <trans-unit id="action.login">
             <source>action.login</source>
-            <target>Log in</target>
+            <target>Zaloguj się</target>
         </trans-unit>
         <trans-unit id="action.sign_in">
             <source>action.sign_in</source>
-            <target>Sign in</target>
+            <target>Zarejestruj się</target>
         </trans-unit>
         <trans-unit id="message.created_successfully">
             <source>message.created_successfully</source>
-            <target>Created successfully</target>
+            <target>Pomyślnie utworzono</target>
         </trans-unit>
         <trans-unit id="message.edited_successfully">
             <source>message.edited_successfully</source>
-            <target>Edited successfully</target>
+            <target>Pomyślnie edytowano</target>
         </trans-unit>
         <trans-unit id="message.deleted_successfully">
             <source>message.deleted_successfully</source>
-            <target>Deleted successfully</target>
+            <target>Pomyślnie usunięto</target>
         </trans-unit>
         <trans-unit id="title.post_edit">
             <source>title.post_edit</source>
-            <target>Edit article</target>
+            <target>Edytuj artykuł</target>
         </trans-unit>
         <trans-unit id="title.post_delete">
             <source>title.post_delete</source>
-            <target>Delete article</target>
+            <target>Usuń artykuł</target>
         </trans-unit>
         <trans-unit id="title.category_create">
             <source>title.category_create</source>
-            <target>Create category</target>
+            <target>Utwórz kategorię</target>
         </trans-unit>
         <trans-unit id="title.category_delete">
             <source>title.category_delete</source>
-            <target>Delete category</target>
+            <target>Usuń kategorię</target>
         </trans-unit>
         <trans-unit id="title.category_edit">
             <source>title.category_edit</source>
-            <target>Edit category</target>
+            <target>Edytuj kategorię</target>
         </trans-unit>
         <trans-unit id="title.category_list">
             <source>title.category_list</source>
-            <target>Category list</target>
+            <target>Lista kategorii</target>
         </trans-unit>
         <trans-unit id="title.category_details">
             <source>title.category_details</source>
-            <target>Category</target>
+            <target>Kategoria</target>
         </trans-unit>
         <trans-unit id="title.comment_create">
             <source>title.comment_create</source>
-            <target>Create comment</target>
+            <target>Utwórz komentarz</target>
         </trans-unit>
         <trans-unit id="title.comment_delete">
             <source>title.comment_delete</source>
-            <target>Delete comment</target>
+            <target>Usuń komentarz</target>
         </trans-unit>
         <trans-unit id="title.comment_edit">
             <source>title.comment_edit</source>
-            <target>Edit comment</target>
+            <target>Edytuj komentarz</target>
         </trans-unit>
         <trans-unit id="title.comment_list">
             <source>title.comment_list</source>
-            <target>Comment list</target>
+            <target>Lista komentarzy</target>
         </trans-unit>
         <trans-unit id="title.comment_details">
             <source>title.comment_details</source>
-            <target>Comment</target>
+            <target>Komentarz</target>
         </trans-unit>
         <trans-unit id="label.post">
             <source>label.post</source>
-            <target>Article</target>
+            <target>Artykuł</target>
         </trans-unit>
         <trans-unit id="message.form_error">
             <source>message.form_error</source>
-            <target>Form error</target>
+            <target>Błąd formularza</target>
         </trans-unit>
         <trans-unit id="title.tag_create">
             <source>title.tag_create</source>
-            <target>Create tag</target>
+            <target>Utwórz tag</target>
         </trans-unit>
         <trans-unit id="title.tag_delete">
             <source>title.tag_delete</source>
-            <target>Delete tag</target>
+            <target>Usuń tag</target>
         </trans-unit>
         <trans-unit id="title.tag_edit">
             <source>title.tag_edit</source>
-            <target>Edit tag</target>
+            <target>Edytuj tag</target>
         </trans-unit>
         <trans-unit id="title.tag_list">
             <source>title.tag_list</source>
-            <target>Tag list</target>
+            <target>Lista tagów</target>
         </trans-unit>
         <trans-unit id="title.tag_details">
             <source>title.tag_details</source>
@@ -204,35 +204,35 @@
         </trans-unit>
         <trans-unit id="title.user_create">
             <source>title.user_create</source>
-            <target>Create user</target>
+            <target>Utwórz użytkownika</target>
         </trans-unit>
         <trans-unit id="title.user_delete">
             <source>title.user_delete</source>
-            <target>Delete user</target>
+            <target>Usuń użytkownika</target>
         </trans-unit>
         <trans-unit id="title.user_edit">
             <source>title.user_edit</source>
-            <target>Edit user</target>
+            <target>Edytuj użytkownika</target>
         </trans-unit>
         <trans-unit id="title.user_list">
             <source>title.user_list</source>
-            <target>User list</target>
+            <target>Lista użytkowników</target>
         </trans-unit>
         <trans-unit id="action.edit_password">
             <source>action.edit_password</source>
-            <target>Edit password</target>
+            <target>Edytuj hasło</target>
         </trans-unit>
         <trans-unit id="title.user_details">
             <source>title.user_details</source>
-            <target>User</target>
+            <target>Użytkownik</target>
         </trans-unit>
         <trans-unit id="message.category_contains_posts">
             <source>message.category_contains_posts</source>
-            <target>Category contains posts</target>
+            <target>Kategoria zawiera artykuły</target>
         </trans-unit>
         <trans-unit id="message.tag_contains_posts">
             <source>message.tag_contains_posts</source>
-            <target>Tag contains posts</target>
+            <target>Tag zawiera artykuły</target>
         </trans-unit>
     </body>
     </file>
