--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -234,6 +234,14 @@
             <source>message.tag_contains_posts</source>
             <target>Tag zawiera artykuły</target>
         </trans-unit>
+        <trans-unit id="label.password">
+            <source>label.password</source>
+            <target>Hasło</target>
+        </trans-unit>
+        <trans-unit id="label.author">
+            <source>label.author</source>
+            <target>Autor</target>
+        </trans-unit>
     </body>
     </file>
 </xliff>
